1. Made model definition form default class than inline. 2. fixed text overflow issue in model list in workflowView. 3. handled model list overflow scrolling in workflowView.

--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -642,6 +642,12 @@ body {
   /*border: solid 1px blue;*/
   /*width: 100%;*/
 }
+
+#workflowView .list-group-item {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 #workflowView .tooltiptext {
   /*visibility: hidden;*/
   /*width: 120px;*/
