--- a/src/stylesheets/workflowView.less
+++ b/src/stylesheets/workflowView.less
@@ -10,6 +10,11 @@
         display: inline-block;
         border-bottom: 1px dotted black;
     }*/
+    .list-group-item {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
 
     .tooltiptext {
         /*visibility: hidden;*/
